--- a/publications.html
+++ b/publications.html
@@ -104,6 +104,12 @@
   <h1>Conference Publications</h1>
           <ol>
 
+          <li> Basak Guler, A. Salman Avestimehr, Antonio Ortega, A Topology-Aware Coding Framework for Distributed Graph Processing, to appear in International Conference on Acoustics, Speech, and Signal Processing, ICASSP'19, Brighton, UK, May. 2019. </li>
+          <br /> 
+          
+          <li> Basak Guler, Ajinkya Jayawant, A. Salman Avestimehr, Antonio Ortega, Robust Graph Signal Sampling, to appear in International Conference on Acoustics, Speech, and Signal Processing, ICASSP'19, Brighton, UK, May. 2019. </li>
+          <br /> 
+
           <li> Basak Guler, Deniz G&uuml;nd&uuml;z, Aylin Yener,&nbsp;<a href="http://wcan.ee.psu.edu/papers/BG_ISIT_17.pdf"> On the Necessary Conditions for Transmitting Correlated Sources over a Multiple Access Channel</a>, Proceedings of the IEEE International Symposium on Information Theory, ISIT'17, Aachen, Germany, Jun. 2017. </li>
           <br /> 
           
