--- a/publications.html
+++ b/publications.html
@@ -73,6 +73,15 @@
  <h1>Publications</h1>
 		<br>
  -->
+
+ <h1> Recent Publications/Preprint </h1>
+  <ol>
+  <li> Basak Guler, Jinhyun So, A. Salman Avestimehr, and Payman Mohassel, &nbsp;<a href="https://arxiv.org/pdf/1902.00641.pdf">CodedPrivateML: A Fast and Privacy-Preserving Framework for Distributed Machine Learning</a>, available on arXiv:1902.00641. </li>       
+
+
+  <br />
+  </ol>
+
         
  <h1>Book Chapters</h1>
   <ol>
