--- a/publications.html
+++ b/publications.html
@@ -95,7 +95,7 @@
   
  <h1>Journal Publications</h1>
  <ol>
- <li> Basak Guler, Aylin Yener, and Ananthram Swami, &nbsp;<a href="https://ieeexplore.ieee.org/document/8476247">The Semantic Communication Game</a>, IEEE Transactions on Cognitive Communications and Networking, accepted Sep. 2018. </li>
+ <li> Basak Guler, Aylin Yener, and Ananthram Swami, &nbsp;<a href="https://ieeexplore.ieee.org/document/8476247">The Semantic Communication Game</a>, IEEE Transactions on Cognitive Communications and Networking,  vol. 4, no. 4, pp. 787-802, Dec. 2018.  </li>
  <br /> 
  
   <li> Basak Guler, Deniz G&uuml;nd&uuml;z, and Aylin Yener,&nbsp;<a href="http://wcan.ee.psu.edu/papers/BG_TIT_18.pdf">Lossy Transmission of Correlated Sources over a Multiple Access Channel: Necessary Conditions and Separation Results</a>, IEEE Transactions on Information Theory, 64(9), pp. 6081-6097, Sep. 2018.  </li>
