--- a/index.html
+++ b/index.html
@@ -80,11 +80,13 @@
 <!-- 		I was a member of the <a href="http://wcan.ee.psu.edu">Wireless Communications and Networking Laboratory (WCAN)</a>. --> 
 		<p>
 		
-		<p style="text-align:justify">   My current research is focused on distributed computing and privacy-aware graph processing. I am particularly interested in developing privacy preserving, communication efficient distributed computing frameworks for large-scale graph processing.  
+		<p style="text-align:justify">   My research is focused on developing scalable, privacy-preserving, and context-aware distributed computing frameworks for large-scale information processing.  
 		<p>  
 		
+<!-- 
 		<p style="text-align:justify">   I am also interested in information transfer in networks with social and semantic features, in particular, developing mathematical models of human factors in computing and communication.     
 		<p>        
+ -->
 
 <!-- 
 <p style="font-size:large;"><font color="blue"><b>News:<b></font></p>
