--- a/research.html
+++ b/research.html
@@ -69,11 +69,61 @@
 
 		<div id="copy" style="padding:20px; width:600px">
 
-        <h1><b>Modeling Human Aspects of Communication </b></h1>
+
+
+
+
+
+
+
+<h1><b>Scalable and Privacy-Aware Distributed Information Processing</b></h1>
+<br />
+<p style="text-align:justify"> 
+Graph topologies are important tools for modeling real-world phenomena, such as the topology of the World-Wide-Web, social and biological interactions, or the connectivity patterns in sensor networks. 
+As such, modern applications often require processing large volumes of information that is represented in the form of a graph, such as PageRank, a widely used graph algorithm for ranking webpages in search engines, or semi-supervised learning and graph signal filtering, an important building block of graph neural networks. 
+Distributed computing provides an effective means of scaling-up large-scale graph processes, by distributing the graph storage and computation load across multiple processors (workers) in the cloud. </p>
+
+
+
+
+<p style="text-align:center;"><img src="images/graphproc.png" height="190px" style="padding:5px;" />  </p >   
+
+
+<p style="text-align:justify">However, this also requires extensive communication and coordination between the processors, which can take up to 50% of the overall execution time, making the  </b>inter-processor communication load</b> a major bottleneck in scalability. I design scalable and privacy-aware distributed computing frameworks for large-scale graph and information processing applications, using coding and information theory principles. 
+ </p >
+       
+
+
+<p style="text-align:justify"> <b>Related publications:</b> <br /></p >
+
+
+
+<p style="text-align:justify">Basak Guler, A. Salman Avestimehr, Antonio Ortega, &nbsp;<a href="BG-ICASSP-19-Topology.pdf">A Topology-Aware Coding Framework for Distributed Graph Processing</a>, International Conference on Acoustics, Speech, and Signal Processing, ICASSP'19, Brighton, UK, May. 2019. </p >        
+   
+<p style="text-align:justify">Basak Guler, Ajinkya Jayawant, A. Salman Avestimehr, Antonio Ortega, &nbsp;<a href="BG-ICASSP-19-Robust.pdf">Robust Graph Signal Sampling</a>, International Conference on Acoustics, Speech, and Signal Processing, ICASSP'19, Brighton, UK, May. 2019. </p >  
+   
+<p style="text-align:justify">Basak Guler, A. Salman Avestimehr, Antonio Ortega, &nbsp;<a href="BG-MLSP-19.pdf">Privacy-Aware Distributed Graph-Based Semi-Supervised Learning</a>, IEEE International Workshop on Machine Learning for Signal Processing, MLSP'19, Pittsburgh, PA, Oct. 2019.</p >  
+
+
+<br /> 
+
+
+
+
+
+
+
+
+
+        <h1><b>Context-Aware Multi-User Communication Architectures</b></h1>
 <br />
 
 <p style="text-align:justify"> 
-Emerging networks such as the Internet of Things (IoT) are designed to facilitate the interaction of humans with intelligent machines. These networks consist of actors with possibly different <b>characteristics</b>, <b>goals</b>, and <b>interests</b>. Such differences can in turn lead to various interpretations of the received information. I design networks that operate under such ambiguous environments, by leveraging the semantic and social features of information transmission. Unlike conventional communication networks, this necessitates taking into account the personal background and characteristics of the interacting parties. 
+Another focus of my research is understanding the information-theoretic performance limits of context-aware  communication networks. 
+This is inspired by scenarios in which 
+interacting parties are influenced by side information while interpreting the messages, such as external information resources or knowledge bases representing the unique backgrounds, characteristics, or biases. To do so, my research explores the fundamental limits of the amount of information that can be transferred with a fidelity criterion in a multi-user communication network when interacting parties have access to side information. 
+
+
 </p >
 <img src="images/sensing.png" height="140px" style="padding:5px;" />
 <img src="images/multilayer.png" height="140px" style="padding:5px;" />
@@ -83,20 +133,24 @@ Emerging networks such as the Internet of Things (IoT) are designed to facilitat
 
 <p style="text-align:justify"> <b>Related publications:</b> <br /></p >
 
-<p style="text-align:justify">Basak Guler, Aylin Yener, Ebrahim MolavianJazi, Prithwish Basu, Ananthram Swami, Carl Andersen,&nbsp;<a href="http://wcan.ee.psu.edu/papers/BG_DCC_2016.pdf">Interactive Function Compression with Asymmetric Priors</a>, Proceedings of the IEEE Data Compression Conference, DCC'16, Snowbird, UT, Mar. 2016. </p >
 <p style="text-align:justify">Basak Guler, Deniz G&uuml;nd&uuml;z, and Aylin Yener,&nbsp;<a href="http://wcan.ee.psu.edu/papers/BG_TIT_18.pdf">Lossy Transmission of Correlated Sources over a Multiple Access Channel: Necessary Conditions and Separation Results</a>, IEEE Transactions on Information Theory, 64(9), pp. 6081-6097, Sep. 2018.  </p >
 
 
+<p style="text-align:justify">Basak Guler, Deniz G&uuml;nd&uuml;z, Aylin Yener,&nbsp;<a href="http://wcan.ee.psu.edu/papers/BG_ISIT_17.pdf"> On the Necessary Conditions for Transmitting Correlated Sources over a Multiple Access Channel</a>, Proceedings of the IEEE International Symposium on Information Theory, ISIT'17, Aachen, Germany, Jun. 2017. </p >
+
+<p style="text-align:justify"> Basak Guler, Deniz G&uuml;nd&uuml;z, Aylin Yener,&nbsp;<a href="http://wcan.ee.psu.edu/papers/BG_ISIT_16.pdf">On Lossy Transmission of Correlated Sources over a Multiple Access Channel</a>, Proceedings of the IEEE International Symposium on Information Theory, ISIT'16, Barcelona, Spain, Jul. 2016. </p >
+
+
+<p style="text-align:justify">Basak Guler, Aylin Yener, Ebrahim MolavianJazi, Prithwish Basu, Ananthram Swami, Carl Andersen,&nbsp;<a href="http://wcan.ee.psu.edu/papers/BG_DCC_2016.pdf">Interactive Function Compression with Asymmetric Priors</a>, Proceedings of the IEEE Data Compression Conference, DCC'16, Snowbird, UT, Mar. 2016. </p >
+
 <p style="text-align:justify">Basak Guler, Ebrahim MolavianJazi, Aylin Yener,&nbsp;<a href="http://wcan.ee.psu.edu/papers/BG_ISIT_15.pdf">Remote Source Coding with Two-Sided Information</a>, Proceedings of the IEEE International Symposium on Information Theory, ISIT'15, Hong Kong, Jun. 2015.</p >
 
+<p style="text-align:justify">Basak Guler, Kaya Tutuncuoglu, Aylin Yener,&nbsp;<a href="http://wcan.ee.psu.edu/papers/BG_ITW_2015.pdf">Maximizing Recommender's Influence in a Social Network: An Information-Theoretic Perspective</a>, Proceedings of the IEEE Information Theory Workshop, ITW'15, Jeju Island, Korea, Oct. 2015.</p >
 
 
 <p style="text-align:justify">Basak Guler, Aylin Yener,&nbsp;<a href="http://wcan.ee.psu.edu/papers/BG_DCC_2014.pdf">Compressing Semantic Information with Varying Priorities</a>, Proceedings of the IEEE Data Compression Conference, DCC'14, Snowbird, UT, Mar. 2014. </p >
 
-<p style="text-align:justify">Basak Guler, Aylin Yener, Ananthram Swami,&nbsp;<a href="http://wcan.ee.psu.edu/papers/BG_GlobalSIP_2016.pdf">Learning Causal Information Flow Structures in Multi-Layer Networks</a>, Proceedings of the IEEE GlobalSIP Symposium on Non-Commutative Theory and Applications, GlobalSIP'16, Washington DC, Dec. 2016.   </p >
 
-
-<p style="text-align:justify">Basak Guler, Aylin Yener, Prithwish Basu, Carl Andersen, Ananthram Swami,&nbsp;<a href="http://wcan.ee.psu.edu/papers/BG_GlobalSIP14_1.pdf">A Study on Compressing Graphical Structures</a>, Proceedings of the IEEE Global Conference on Signal and Information Processing - Symposium on Network Theory, GlobalSIP'14, Atlanta, GA, Dec. 2014. </p >
 
 
 
@@ -104,14 +158,13 @@ Emerging networks such as the Internet of Things (IoT) are designed to facilitat
 
 <h1><b>Semantics-Aware Information Transfer in the Physical Layer </b></h1>
 <br />
-<p style="text-align:justify"> Modern networked systems allow interaction between humans and physical objects with various processing and inference capabilities. 
+<p style="text-align:justify"> 
+Emerging networks such as the Internet of Things (IoT) are designed to facilitate the interaction of humans with intelligent machines. These networks consist of actors with possibly different <b>characteristics</b>, <b>goals</b>, and <b>interests</b>. Such differences can in turn lead to various interpretations of the received information. I design networks that operate under such ambiguous environments, by leveraging the semantic and social features of information transmission. Unlike conventional communication networks, this necessitates taking into account the personal background and characteristics of the interacting parties. 
 For these networks, reliable communication implies that the intended meaning of messages is preserved at reception. 
 In effect, this new generation of networks supports interaction at a level that communicating parties can form social relationships and build trust, which may further affect how the received messages are interpreted. 
 In contrast, communication protocols that operate in the physical layer do not take into account the difference between the meanings of transmitted and recovered messages, but rather are concerned with the engineering problem of reliably communicating sequences of bits to the receiver. 
-These factors together motivate a new approach that molds physical and application layer metrics into one, i.e., a novel performance criterion that takes into account the <b>meanings</b> of the communicated messages. 
+These factors together motivate a new approach that molds physical and application layer metrics into one, i.e., a novel performance criterion that takes into account the meanings of the communicated messages. 
 I design mechanisms to achieve this, i.e., how to reliably communicate the meanings of messages through a noisy channel. </p>
-
-<p style="text-align:justify"> We introduced the first <b>joint source-channel coding models</b>  for transmitting <b>semantic messages</b> over a physical channel, such as <b>text</b>, while preserving their meanings. </p>
 
 <img src="images/semantic.png" height="130px" style="padding:5px;" />     
 <br /> 
@@ -127,7 +180,7 @@ An individual with such influence capability can have a significant impact on in
 
 <p style="text-align:justify"> <b>Related publications:</b> <br /></p >
 
-<p style="text-align:justify">Basak Guler, Aylin Yener, and Ananthram Swami, &nbsp;<a href="https://ieeexplore.ieee.org/document/8476247">The Semantic Communication Game</a>, IEEE Transactions on Cognitive Communications and Networking, accepted Sep. 2018. </p >  
+<p style="text-align:justify">Basak Guler, Aylin Yener, and Ananthram Swami, &nbsp;<a href="https://ieeexplore.ieee.org/document/8476247">The Semantic Communication Game</a>, IEEE Transactions on Cognitive Communications and Networking, vol. 4, no. 4, pp. 787-802, Dec. 2018. </p >  
 
 
 <p style="text-align:justify">Basak Guler, Aylin Yener, Ananthram Swami,&nbsp;<a href="http://wcan.ee.psu.edu/papers/BG_ICC_16.pdf">The Semantic Communication Game</a>, Proceedings of the IEEE International Conference on Communications, ICC'16, Kuala Lumpur, Malaysia, May 2016. </p >        
@@ -137,21 +190,6 @@ An individual with such influence capability can have a significant impact on in
 
 <br /> 
 
-<h1><b> Social Influence and Recommendation Systems: An Information-Theoretic View </b></h1>
-<br />
-<p style="text-align:justify"> An important aspect of information transfer in networks subject to human factors is social influence. In other words, how a person reacts to the messages is affected by the actions of others in the community. In this work, we address how to characterize the influence of one person's actions on the actions of another person from an information-theoretic perspective. To do so, we model the social network as a channel with feedback in which the actions taken by users affect the future actions of their friends, and measure social influence via directed information. In order to determine the theoretical limits of the influence that an entity who can make personalized suggestions, such as a recommender, has in the social network, maximizing the recommender's influence is related to finding the capacity of a finite state channel with causal feedback. Accordingly, we identify the optimal recommendation strategies a recommender can adopt to maximize its influence over the social network when persons are influenced by their neighbors in responding to the recommender's suggestions. </p>
-
-<img src="images/recommender.png" height="120px" style="padding:5px;" />     
-<img src="images/RecommenderChannel.png" height="165px" style="padding:5px;" />  
-<br /> 
-<br /> 
-<br />
-
-<p style="text-align:justify"> <b>Related publications:</b> <br /></p >
-
-<p style="text-align:justify">Basak Guler, Kaya Tutuncuoglu, Aylin Yener,&nbsp;<a href="http://wcan.ee.psu.edu/papers/BG_ITW_2015.pdf">Maximizing Recommender's Influence in a Social Network: An Information-Theoretic Perspective</a>, Proceedings of the IEEE Information Theory Workshop, ITW'15, Jeju Island, Korea, Oct. 2015.</p >
-
-<br /> 
 
 
 <h1><b>Heterogeneous Wireless Networks: Interference Management  </b></h1>
