--- a/research.html
+++ b/research.html
@@ -125,11 +125,11 @@ interacting parties are influenced by side information while interpreting the me
 
 
 </p >
-<img src="images/sensing.png" height="140px" style="padding:5px;" />
-<img src="images/multilayer.png" height="140px" style="padding:5px;" />
+<p style="text-align:center;"><img src="images/multiuser.png" height="130px" style="padding:5px;" />  </p >   
 
-<br />
-<br />
+
+
+<p style="text-align:justify"> I investigate the impact of shared or differing knowledge bases on the fundamental performance limits when multiple parties transfer information through a noisy channel. </p >
 
 <p style="text-align:justify"> <b>Related publications:</b> <br /></p >
 
