--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 		<img src="images/photo-bg.jpg" width="224.56" height="235.44" style="padding:20px; float:right" /></td>
 
 		<div style="padding:20px 60px 30px 30px" width="80px">
-		<p style="text-align:justify">  I am a postdoctoral scholar in <a href="https://minghsiehee.usc.edu/"> Ming Hsieh Department of Electrical Engineering </a> at <a href="https://www.usc.edu/">University of Southern California</a>, working jointly with <a href="http://www-bcf.usc.edu/~avestime/Home.html">Prof. Salman Avestimehr</a> and <a href="https://viterbi.usc.edu/directory/faculty/Ortega/Antonio">Prof. Antonio Ortega</a>.
+		<p style="text-align:justify">  I am a postdoctoral scholar in the <a href="https://minghsiehee.usc.edu/"> Ming Hsieh Department of Electrical Engineering </a> at <a href="https://www.usc.edu/">University of Southern California</a>, working jointly with <a href="http://www-bcf.usc.edu/~avestime/Home.html">Prof. Salman Avestimehr</a> and <a href="https://viterbi.usc.edu/directory/faculty/Ortega/Antonio">Prof. Antonio Ortega</a>.
 		</p> 
 		
 		
@@ -80,9 +80,15 @@
 <!-- 		I was a member of the <a href="http://wcan.ee.psu.edu">Wireless Communications and Networking Laboratory (WCAN)</a>. --> 
 		<p>
 		
-		<p style="text-align:justify">   My research is focused on developing scalable, privacy-preserving, and context-aware distributed computing frameworks for large-scale information processing.  
+		<p style="text-align:justify">   I am interested in developing scalable, privacy-preserving, and context-aware communication and information processing frameworks for large-scale distributed networks. 
 		<p>  
 		
+		<p style="font-size:large;"><font color="blue"><b>News:<b></font></p>
+		
+		<p style="text-align:justify"><font color="purple">   I will be joining <a href="https://www.ece.ucr.edu/">University of California, Riverside</a> as an Assistant Professor in Fall 2020. 
+		
+		I am looking for motivated students with a strong mathematical background. If you are interested in working with me, please send me an e-mail with your CV and research interests. 
+		</font><p>
 <!-- 
 		<p style="text-align:justify">   I am also interested in information transfer in networks with social and semantic features, in particular, developing mathematical models of human factors in computing and communication.     
 		<p>        
@@ -99,7 +105,7 @@
  -->
 
 		  <p> I can be reached at Room EEB 532, Ming Hsieh Department of Electrical Engineering.</p>
-<p><b>Email:</b> bguler at usc dot edu</p>
+<p><b>Email:</b> bguler at usc dot edu </p>
 
 		</div>		
 
