--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 		
 		<p style="font-size:large;"><font color="blue"><b>News:<b></font></p>
 		
-		<p style="text-align:justify"><font color="purple">   I will be joining <a href="https://www.ece.ucr.edu/">University of California, Riverside</a> as an Assistant Professor in Fall 2020. 
+		<p style="text-align:justify"><font color="purple">   I will be joining University of California, Riverside as an Assistant Professor in Fall 2020. 
 		
 		I am looking for motivated students with a strong mathematical background. If you are interested in working with me, please send me an e-mail with your CV and research interests. 
 		</font><p>
