--- a/index.html
+++ b/index.html
@@ -83,12 +83,12 @@
 		<p style="text-align:justify">   I am interested in developing scalable, privacy-preserving, and context-aware communication and information processing frameworks for large-scale distributed networks. 
 		<p>  
 		
-		<p style="font-size:large;"><font color="blue"><b>News:<b></font></p>
+		<p style="font-size:large;"><font color="blue"><b>News:</b></font></p>
 		
-		<p style="text-align:justify"><font color="purple">   I will be joining University of California, Riverside as an Assistant Professor in Fall 2020. 
+		<p style="text-align:justify"><font color="purple"><b>   I will be joining University of California, Riverside as an Assistant Professor in Fall 2020. 
 		
-		I am looking for motivated students with a strong mathematical background. If you are interested in working with me, please send me an e-mail with your CV and research interests. 
-		</font><p>
+		I am looking for motivated students with a strong mathematical background. If you would like to work with me, please send me an e-mail with your CV and research interests. 
+		</b></font><p>
 <!-- 
 		<p style="text-align:justify">   I am also interested in information transfer in networks with social and semantic features, in particular, developing mathematical models of human factors in computing and communication.     
 		<p>        
