--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 		
 		<p style="font-size:large;"><font color="blue"><b>News:</b></font></p>
 		
-		<p style="text-align:justify"><font color="purple"><b>   I will be joining University of California, Riverside as an Assistant Professor in Fall 2020. 
+		<p style="text-align:justify"><font color="purple"><b>   I will be joining University of California, Riverside as an Assistant Professor starting Fall 2020. 
 		
 		I am looking for motivated students with a strong mathematical background. If you would like to work with me, please send me an e-mail with your CV and research interests. 
 		</b></font><p>
