--- a/publications.html
+++ b/publications.html
@@ -84,6 +84,10 @@
   
  <h1>Journal Publications</h1>
  <ol>
+ 
+  <li> Basak Guler, A. Salman Avestimehr, Antonio Ortega, TACC: Topology-Aware Coded Computing for Distributed Graph Processing, to appear in IEEE Transactions on Signal and Information Processing over Networks, May 2020.   </li>
+  <br /> 
+  
  <li> Basak Guler, Aylin Yener, and Ananthram Swami, &nbsp;<a href="http://wcan.ee.psu.edu/papers/BG_TCCN_18.pdf">The Semantic Communication Game</a>, IEEE Transactions on Cognitive Communications and Networking,  vol. 4, no. 4, pp. 787-802, Dec. 2018.  </li>
  <br /> 
  
