--- a/research.html
+++ b/research.html
@@ -97,6 +97,8 @@ Distributed computing provides an effective means of scaling-up large-scale grap
 <p style="text-align:justify"> <b>Related publications:</b> <br /></p >
 
 
+<p style="text-align:justify">Basak Guler, A. Salman Avestimehr, Antonio Ortega, &nbsp;<a href="BG-TSIPN-20.pdf">TACC: Topology-Aware Coded Computing for Distributed Graph Processing</a>, IEEE Transactions on Signal and Information Processing over Networks, vol. 6, pp. 508-525, May 2020.</p >
+
 
 <p style="text-align:justify">Basak Guler, A. Salman Avestimehr, Antonio Ortega, &nbsp;<a href="BG-ICASSP-19-Topology.pdf">A Topology-Aware Coding Framework for Distributed Graph Processing</a>, International Conference on Acoustics, Speech, and Signal Processing, ICASSP'19, Brighton, UK, May. 2019. </p >        
    
