--- a/index.html
+++ b/index.html
@@ -72,23 +72,48 @@
 		<img src="images/photo-bg.jpg" width="224.56" height="235.44" style="padding:20px; float:right" /></td>
 
 		<div style="padding:20px 60px 30px 30px" width="80px">
-		<p style="text-align:justify">  I am a postdoctoral scholar in the <a href="https://minghsiehee.usc.edu/"> Ming Hsieh Department of Electrical Engineering </a> at <a href="https://www.usc.edu/">University of Southern California</a>, working jointly with <a href="http://www-bcf.usc.edu/~avestime/Home.html">Prof. Salman Avestimehr</a> and <a href="https://viterbi.usc.edu/directory/faculty/Ortega/Antonio">Prof. Antonio Ortega</a>.
+		
+		<p style="text-align:justify">  I am an Assistant Professor in the <a href="https://www.ece.ucr.edu/"> Department of Electrical and Computer Engineering </a> at <a href="https://www.ucr.edu/">University of California, Riverside</a>.
+		</p> 
+
+		<p style="text-align:justify"> I received my PhD from the <a href="https://www.eecs.psu.edu">Department of Electrical Engineering</a> at the <a href="https://www.psu.edu">Pennsylvania State University</a>, where I was working with <a href="http://labs.ee.psu.edu/faculty/yener/">Prof. Aylin Yener</a>. 
+<!-- 		I was a member of the <a href="http://wcan.ee.psu.edu">Wireless Communications and Networking Laboratory (WCAN)</a>. --> 
+After my PhD, I worked as a postdoctoral scholar in the <a href="https://minghsiehee.usc.edu/"> Ming Hsieh Department of Electrical and Computer Engineering </a> at <a href="https://www.usc.edu/">University of Southern California</a>, where I was working jointly with <a href="http://www-bcf.usc.edu/~avestime/Home.html">Prof. Salman Avestimehr</a> and <a href="https://viterbi.usc.edu/directory/faculty/Ortega/Antonio">Prof. Antonio Ortega</a>.
 		</p> 
 		
 		
-		<p style="text-align:justify"> During my PhD, I was working with <a href="http://labs.ee.psu.edu/faculty/yener/">Prof. Aylin Yener</a> in <a href="https://www.eecs.psu.edu">Department of Electrical Engineering</a> at the <a href="https://www.psu.edu">Pennsylvania State University</a>. 
-<!-- 		I was a member of the <a href="http://wcan.ee.psu.edu">Wireless Communications and Networking Laboratory (WCAN)</a>. --> 
-		<p>
+
 		
 		<p style="text-align:justify">   I am interested in developing scalable, privacy-preserving, and context-aware communication and information processing frameworks for large-scale distributed networks. 
 		<p>  
+
+		<p style="font-size:large;"><font color="blue"><b>Prospective students:</b></font></p>
+		
+	
+		<p style="text-align:justify"><font color="purple"><b>   
+		
+		I am always interested in working with motivated students who would like to pursue research in one or more of the following areas (potentially, the intersection of), communications, learning, information theory, optimization, and signal processing. 
+
+<p> My research typically involves both  theoretical and implementation components, which requires a strong mathematical background. Familiarity with coding (Python, C++) is a plus but not required. 
+		If you are interested in working with me, please send me an e-mail with your CV and research interests. 
+		</b></font><p>
 		
 		<p style="font-size:large;"><font color="blue"><b>News:</b></font></p>
+
+		<p style="text-align:justify">
 		
-		<p style="text-align:justify"><font color="purple"><b>   I will be joining University of California, Riverside as an Assistant Professor starting Fall 2020. 
+    New paper on federated learning: &nbsp;<a href="https://arxiv.org/pdf/2002.04156.pdf">Turbo-Aggregate: Breaking the Quadratic Aggregation Barrier in Secure Federated Learning</a></li>       
+
+  <p>
+  New paper on distributed graph processing: &nbsp;<a href="BG-TSIPN-20.pdf">TACC: Topology-Aware Coded Computing for Distributed Graph Processing</a></li>
+  
+  <p>  
+  New paper on privacy-aware distributed machine learning: &nbsp;<a href="https://arxiv.org/pdf/1902.00641.pdf">CodedPrivateML: A Fast and Privacy-Preserving Framework for Distributed Machine Learning</a> </li>       
+
 		
-		I am looking for motivated students with a strong mathematical background. If you would like to work with me, please send me an e-mail with your CV and research interests. 
-		</b></font><p>
+		  
+		<p>
+	
 <!-- 
 		<p style="text-align:justify">   I am also interested in information transfer in networks with social and semantic features, in particular, developing mathematical models of human factors in computing and communication.     
 		<p>        
@@ -103,9 +128,15 @@
 <p><font color="coral"><b>October 2015:</b></font> I participated in the <a href="http://ghc.anitaborg.org">Grace Hopper Celebration of Women in Computing</a> as a student scholar. </p>
 <p><font color="coral"><b>June 2015:</b></font>  Passed my PhD Proposal Exam.
  -->
+		<p style="font-size:large;"><font color="blue"><b>Contact:</b></font></p>
 
+
+		  <p>I can be reached at bguler at ece dot ucr dot edu </p>
+
+<!-- 
 		  <p> I can be reached at Room EEB 532, Ming Hsieh Department of Electrical Engineering.</p>
 <p><b>Email:</b> bguler at usc dot edu </p>
+ -->
 
 		</div>		
 
