--- a/publications.html
+++ b/publications.html
@@ -73,7 +73,16 @@
  <h1>Publications</h1>
 		<br>
  -->
-
+ <h1>Preprints/Recent Publications</h1>
+ <ol>
+ 
+   <li> Jinhyun So, Basak Guler, A. Salman Avestimehr, &nbsp;<a href="https://arxiv.org/pdf/2002.04156.pdf">Turbo-Aggregate: Breaking the Quadratic Aggregation Barrier in Secure Federated Learning</a>, available on arXiv:2002.04156v2. </li>       
+  <br />
+  
+  <li> Jinhyun So, Basak Guler, A. Salman Avestimehr, and Payman Mohassel, &nbsp;<a href="https://arxiv.org/pdf/1902.00641.pdf">CodedPrivateML: A Fast and Privacy-Preserving Framework for Distributed Machine Learning</a>, available on arXiv:1902.00641. </li>       
+  <br />
+ 
+ </ol>
 
         
  <h1>Book Chapters</h1>
@@ -85,7 +94,7 @@
  <h1>Journal Publications</h1>
  <ol>
  
-  <li> Basak Guler, A. Salman Avestimehr, Antonio Ortega, TACC: Topology-Aware Coded Computing for Distributed Graph Processing, to appear in IEEE Transactions on Signal and Information Processing over Networks, May 2020.   </li>
+  <li> Basak Guler, A. Salman Avestimehr, Antonio Ortega, &nbsp;<a href="BG-TSIPN-20.pdf">TACC: Topology-Aware Coded Computing for Distributed Graph Processing</a>, IEEE Transactions on Signal and Information Processing over Networks, vol. 6, pp. 508-525, May 2020.   </li>
   <br /> 
   
  <li> Basak Guler, Aylin Yener, and Ananthram Swami, &nbsp;<a href="http://wcan.ee.psu.edu/papers/BG_TCCN_18.pdf">The Semantic Communication Game</a>, IEEE Transactions on Cognitive Communications and Networking,  vol. 4, no. 4, pp. 787-802, Dec. 2018.  </li>
