--- a/index.html
+++ b/index.html
@@ -73,18 +73,18 @@
 
 		<div style="padding:20px 60px 30px 30px" width="80px">
 		
+<!-- 
 		<p style="text-align:justify">  I am an Assistant Professor in the <a href="https://www.ece.ucr.edu/"> Department of Electrical and Computer Engineering </a> at <a href="https://www.ucr.edu/">University of California, Riverside</a>.
 		</p> 
+ -->
 
-		<p style="text-align:justify"> I received my PhD from the <a href="https://www.eecs.psu.edu">Department of Electrical Engineering</a> at the <a href="https://www.psu.edu">Pennsylvania State University</a>, where I was working with <a href="http://labs.ee.psu.edu/faculty/yener/">Prof. Aylin Yener</a>. 
-<!-- 		I was a member of the <a href="http://wcan.ee.psu.edu">Wireless Communications and Networking Laboratory (WCAN)</a>. --> 
-After my PhD, I worked as a postdoctoral scholar in the <a href="https://minghsiehee.usc.edu/"> Ming Hsieh Department of Electrical and Computer Engineering </a> at <a href="https://www.usc.edu/">University of Southern California</a>, where I was working jointly with <a href="http://www-bcf.usc.edu/~avestime/Home.html">Prof. Salman Avestimehr</a> and <a href="https://viterbi.usc.edu/directory/faculty/Ortega/Antonio">Prof. Antonio Ortega</a>.
+		<p style="text-align:justify">  I am an Assistant Professor in the Department of Electrical and Computer Engineering  at University of California, Riverside.
 		</p> 
 		
 		
 
 		
-		<p style="text-align:justify">   I am interested in developing scalable, privacy-preserving, and context-aware communication and information processing frameworks for large-scale distributed networks. 
+		<p style="text-align:justify">   My research is on developing scalable, privacy-preserving, and context-aware communication and information processing frameworks for large-scale distributed networks. 
 		<p>  
 
 		<p style="font-size:large;"><font color="blue"><b>Prospective students:</b></font></p>
