--- a/index.html
+++ b/index.html
@@ -90,22 +90,29 @@
 		<p style="font-size:large;"><font color="blue"><b>Prospective students:</b></font></p>
 		
 	
-		<p style="text-align:justify"><font color="purple"><b>   
+		<p style="text-align:justify"> 
 		
 		I am always interested in working with motivated students who would like to pursue research in one or more of the following areas (potentially, the intersection of), communications, learning, information theory, optimization, and signal processing. 
 
 <p> My research typically involves both  theoretical and implementation components, which requires a strong mathematical background. Familiarity with coding (Python, C++) is a plus but not required. 
 		If you are interested in working with me, please send me an e-mail with your CV and research interests. 
-		</b></font><p>
+		<p>
 		
 		<p style="font-size:large;"><font color="blue"><b>News:</b></font></p>
 
 		<p style="text-align:justify">
+	<p style="text-align:justify"><font color="purple"><b> September 2020: </b></font> Our paper "A Scalable Approach for Privacy-Preserving Collaborative Machine-Learning" has been accepted to NeurIPS 2020!</p>
 		
-    New paper on federated learning: &nbsp;<a href="https://arxiv.org/pdf/2002.04156.pdf">Turbo-Aggregate: Breaking the Quadratic Aggregation Barrier in Secure Federated Learning</a></li>       
+	 <p>
+
+    <p style="text-align:justify"><font color="purple"><b> July 2020: </b></font>  New paper on Byzantine-robust privacy-preserving federated learning: &nbsp;<a href="https://arxiv.org/abs/2007.11115">BREA: Byzantine-Resilient Secure Federated Learning</a></li>       
 
   <p>
-  New paper on distributed graph processing: &nbsp;<a href="BG-TSIPN-20.pdf">TACC: Topology-Aware Coded Computing for Distributed Graph Processing</a></li>
+  	
+    <p style="text-align:justify"><font color="purple"><b> May 2020: </b></font>  New paper on communication-efficient secure federated learning: &nbsp;<a href="https://arxiv.org/pdf/2002.04156.pdf">Turbo-Aggregate: Breaking the Quadratic Aggregation Barrier in Secure Federated Learning</a></li>       
+
+  <p>
+  <p style="text-align:justify"><font color="purple"><b> May 2020: </b></font>  New paper on distributed graph processing: &nbsp;<a href="BG-TSIPN-20.pdf">TACC: Topology-Aware Coded Computing for Distributed Graph Processing</a></li>
   
   <p>  
   New paper on privacy-aware distributed machine learning: &nbsp;<a href="https://arxiv.org/pdf/1902.00641.pdf">CodedPrivateML: A Fast and Privacy-Preserving Framework for Distributed Machine Learning</a> </li>       
