--- a/publications.html
+++ b/publications.html
@@ -75,9 +75,16 @@
  -->
  <h1>Preprints/Recent Publications</h1>
  <ol>
- 
+
+  <li> Jinhyun So, Basak Guler, A. Salman Avestimehr, A Scalable Approach for Privacy-Preserving Collaborative Machine Learning, Conference on Neural Information Processing Systems, NeurIPS 2020. </li>       
+  <br />
+
+   <li> Jinhyun So, Basak Guler, A. Salman Avestimehr, &nbsp;<a href="https://arxiv.org/abs/2007.11115">BREA: Byzantine-Resilient Secure Federated Learning</a>, available on arXiv:2007.11115. </li>       
+  <br />
+  
    <li> Jinhyun So, Basak Guler, A. Salman Avestimehr, &nbsp;<a href="https://arxiv.org/pdf/2002.04156.pdf">Turbo-Aggregate: Breaking the Quadratic Aggregation Barrier in Secure Federated Learning</a>, available on arXiv:2002.04156v2. </li>       
   <br />
+  
   
   <li> Jinhyun So, Basak Guler, A. Salman Avestimehr, and Payman Mohassel, &nbsp;<a href="https://arxiv.org/pdf/1902.00641.pdf">CodedPrivateML: A Fast and Privacy-Preserving Framework for Distributed Machine Learning</a>, available on arXiv:1902.00641. </li>       
   <br />
@@ -119,10 +126,13 @@
   <h1>Conference Publications</h1>
           <ol>
 
-  <li> Jinhyun So, Basak Guler, A. Salman Avestimehr, &nbsp;<a href="https://arxiv.org/pdf/2002.04156.pdf">Turbo-Aggregate: Breaking the Quadratic Aggregation Barrier in Secure Federated Learning</a>, available on arXiv:2002.04156v2. </li>       
+  <li> Jinhyun So, Basak Guler, A. Salman Avestimehr, A Scalable Approach for Privacy-Preserving Collaborative Machine Learning, Conference on Neural Information Processing Systems, NeurIPS 2020. </li>       
   <br />
   
-  <li> Jinhyun So, Basak Guler, A. Salman Avestimehr, and Payman Mohassel, &nbsp;<a href="https://arxiv.org/pdf/1902.00641.pdf">CodedPrivateML: A Fast and Privacy-Preserving Framework for Distributed Machine Learning</a>, available on arXiv:1902.00641. </li>       
+  <li> Jinhyun So, Basak Guler, A. Salman Avestimehr, &nbsp;<a href="https://arxiv.org/pdf/2002.04156.pdf">Turbo-Aggregate: Breaking the Quadratic Aggregation Barrier in Secure Federated Learning</a>,  International Conference on Machine Learning: Workshop on Federated Learning for User Privacy and Data Confidentiality, FL-ICML'20. </li>       
+  <br />
+  
+  <li> Jinhyun So, Basak Guler, A. Salman Avestimehr, and Payman Mohassel, &nbsp;<a href="https://arxiv.org/pdf/1902.00641.pdf">CodedPrivateML: A Fast and Privacy-Preserving Framework for Distributed Machine Learning</a>,  International Conference on Machine Learning: Workshop on Coding Theory for Large-Scale Machine Learning, ICML'19, Long Beach, CA, Jun. 2019. </li>       
   <br />
   
   <li> Basak Guler, A. Salman Avestimehr, Antonio Ortega, &nbsp;<a href="BG-MLSP-19.pdf">Privacy-Aware Distributed Graph-Based Semi-Supervised Learning</a>, IEEE International Workshop on Machine Learning for Signal Processing, MLSP'19, Pittsburgh, PA, Oct. 2019. </li>
