--- a/research.html
+++ b/research.html
@@ -100,6 +100,7 @@ Our experiments demonstrate that Turbo-aggregate achieves a total running time t
 
 
 <p style="text-align:justify">Jinhyun So, Basak Guler, A. Salman Avestimehr, &nbsp;<a href="https://arxiv.org/pdf/2002.04156.pdf">Turbo-Aggregate: Breaking the Quadratic Aggregation Barrier in Secure Federated Learning</a>, available on arXiv:2002.04156v2. </p >
+<p style="text-align:justify">Jinhyun So, Basak Guler, A. Salman Avestimehr, &nbsp;<a href="https://arxiv.org/abs/2007.11115">BREA: Byzantine-Resilient Secure Federated Learning</a>, available on arXiv:2007.11115. </p >    
 
 
 
@@ -133,9 +134,14 @@ Experimental evaluations for image classification on the Amazon EC2 cloud demons
 
 <p style="text-align:justify"> <b>Related publications:</b> <br /></p >
 
+<p style="text-align:justify">Jinhyun So, Basak Guler, A. Salman Avestimehr, A Scalable Approach for Privacy-Preserving Collaborative Machine Learning, Conference on Neural Information Processing Systems, NeurIPS 2020. </p >       
 
-<p style="text-align:justify">Jinhyun So, Basak Guler, A. Salman Avestimehr, and Payman Mohassel, &nbsp;<a href="https://arxiv.org/pdf/1902.00641.pdf">CodedPrivateML: A Fast and Privacy-Preserving Framework for Distributed Machine Learning</a>, available on arXiv:1902.00641. </li>       
+<p style="text-align:justify">Jinhyun So, Basak Guler, A. Salman Avestimehr, and Payman Mohassel, &nbsp;<a href="https://arxiv.org/pdf/1902.00641.pdf">CodedPrivateML: A Fast and Privacy-Preserving Framework for Distributed Machine Learning</a>, available on arXiv:1902.00641. </p >       
+ 
+
    </p >
+
+
 
 
 
